--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="bg">
                 <div>
                     <h2 class="title">Informática Europa</h2>
-                    <h4>Reparación de equipos</h4>
+                    <h4>Revisión de equipos</h4>
                 </div>
             </div>
         </section>
