--- a/index.html
+++ b/index.html
@@ -130,10 +130,16 @@
                         <h3>Asesoramiento general</h3>
                     </li>
                     <li>
+                        <h3>Asesoramiento para nuevas compras</h3>
+                    </li>
+                    <li>
                         <h3>Cambio de pasta térmica</h3>
                     </li>
                     <li>
                         <h3>Recuperación de discos duros dañados</h3>
+                    </li>
+                    <li>
+                        <h3>Desarrollo Web</h3>
                     </li>
                 </ul>
             </div>
