--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         <h3>Recuperación de discos duros dañados</h3>
                     </li>
                     <li>
-                        <h3>Desarrollo Web</h3>
+                        <h3>Desarrollo Web (proyectos de pequeña escala)</h3>
                     </li>
                 </ul>
             </div>
