--- a/index.html
+++ b/index.html
@@ -127,10 +127,7 @@
                         <h3>Instalación de sistemas operativos</h3>
                     </li>
                     <li>
-                        <h3>Asesoramiento general</h3>
-                    </li>
-                    <li>
-                        <h3>Asesoramiento para nuevas compras</h3>
+                        <h3>Asesoramiento</h3>
                     </li>
                     <li>
                         <h3>Cambio de pasta térmica</h3>
@@ -139,7 +136,7 @@
                         <h3>Recuperación de discos duros dañados</h3>
                     </li>
                     <li>
-                        <h3>Desarrollo Web (proyectos de pequeña escala)</h3>
+                        <h3>Desarrollo Web</h3>
                     </li>
                 </ul>
             </div>
