--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <footer>
             <section id="contact">
                 <div class="row mx-0 justify-content-center align-items-center">
-                    <h3 class="text-white text-center"><i class="fa-brands fa-whatsapp"></i> <a id="phone_number" href="tel:621317926">621 31 79 26</a></h3>
+                    <h3 class="text-white text-center"><a href="tel:621317926" class="p-3 rounded"><i class="fa-brands fa-whatsapp"></i> 621 31 79 26</a></h3>
                     <div class="d-none">
                         <div class="col-6 col-md-1 mt-5 mt-md-0 text-center">
                             <a href="javascript:void(0)" class="wa"><i class="fa-brands fa-whatsapp-square"></i></a>
