--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="bg">
                 <div>
                     <h2 class="title">Informática Europa</h2>
-                    <h4>Revisión de equipos</h4>
+                    <h4>Reparación de equipos</h4>
                 </div>
             </div>
         </section>
@@ -85,7 +85,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto">
+                    <ul class="navbar-nav w-100">
                         <li class="nav-item">
                             <a id="link-inicio" class="nav-link inicio" aria-current="page"
                                 href="javascript:void(0)">Inicio</a>
@@ -102,6 +102,7 @@
                             <a id="link-contact" class="nav-link contact" href="javascript:void(0)"
                                 tabindex="-1">Contacto</a>
                         </li>
+                        <li class="nav-item ms-sm-auto"><a href="tel:621317926" class="btn btn-success d-block"><i class="fa-solid fa-phone"></i> LLamar</a></li>
                     </ul>
                 </div>
             </div>
